crates/wac-parser/tests/resolution/fail/missing-package-definition.wac
package test:comp;

interface i {
    use foo:bar/nonexistent.{a};
}
